[tool.poetry]
name = "bearing-rul-prediction"
version = "0.1.0"
description = "Deep learning models (RNN & LSTM) for predicting the remaining useful life of rolling element bearings using time series health indicators. Compares performance between RNN and LSTM architectures for predictive maintenance applications."
authors = ["Ali Dibaj <ali.dibaj@bkvibro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.15.2"
datasets = "^3.3.2"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
